--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,6 +3,7 @@
 body {
   /* background-color: #9ad4c7; */
   /* background-color: #9ad2a9; */
+  background-color: 	#eeecdd;
   /* font-family: 'Sniglet', cursive; */
   font-family: 'Roboto', sans-serif;
   /* font-family: 'Staatliches', cursive; */
