--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@700&family=Comfortaa:wght@700&family=Happy+Monkey&family=Roboto:wght@300;400&family=Sniglet&family=Staatliches&family=Viga&display=swap');
 
 body {
-  /* background-color: #9ad4c7; */
+  background-color: #F6F7FB;
   /* background-color: #9ad2a9; */
-  background-color: 	#eeecdd;
+  /* background-color: 	#eeecdd; */
   /* font-family: 'Sniglet', cursive; */
   font-family: 'Roboto', sans-serif;
   /* font-family: 'Staatliches', cursive; */
