--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,39 +2,14 @@
 
 body {
   background-color: #F6F7FB;
-  /* background-color: #9ad2a9; */
-  /* background-color: 	#eeecdd; */
-  /* font-family: 'Sniglet', cursive; */
-  /* font-family: 'Roboto', sans-serif; */
-  /* font-family: 'Nunito', sans-serif;
-  font-family: 'Hind Siliguri', */
-  /* font-family: 'Staatliches', cursive; */
-  /* font-family: 'Cabin Sketch', cursive; */
-  /* font-family: 'Comfortaa', cursive; */
-  /* font-family: 'Happy Monkey', cursive; */
-  /* font-family: 'Viga', sans-serif; */
-  /* font-family: 'Cabin Sketch', cursive; */
-font-family: 'Carme', sans-serif;
-/* font-family: 'Comfortaa', cursive; */
-/* font-family: 'Happy Monkey', cursive; */
-/* font-family: 'Hind Siliguri', sans-serif; */
-/* font-family: 'Nunito', sans-serif; */
-/* font-family: 'Roboto', sans-serif; */
-/* font-family: 'Rubik', sans-serif; */
-/* font-family: 'Sniglet', cursive; */
-/* font-family: 'Staatliches', cursive; */
-/* font-family: 'Viga', sans-serif; */
+  font-family: 'Carme', sans-serif;
 }
 
 .MuiContainer-root {
-  margin-top: 100px;
+  margin-top: 80px;
 }
 
 .container {
-  margin-top: 63px;
+  /* margin-top: 50px; */
   text-align: center;
-}
-
-* {
-
 }
